--- a/css/docs.css
+++ b/css/docs.css
@@ -16,7 +16,7 @@ body {
 
 .left {
     float: left;
-    width: 300px;
+    width: 20%;
     padding-top: 75px;
     padding-left: 30px;
     background-color: #fce6ff;
